@@ -16,11 +16,21 @@ import peakspace.entities.User;
 import peakspace.entities.Publication;
 import peakspace.entities.Link_Publication;
 import peakspace.entities.Chapter;
+import peakspace.exception.NotFoundException;
+import peakspace.dto.response.*;
+import peakspace.entities.User;
+import peakspace.entities.Publication;
+import peakspace.entities.Link_Publication;
+import peakspace.entities.Chapter;
+import peakspace.exception.NotFoundException;
+import peakspace.dto.response.*;
+import peakspace.entities.*;
 import peakspace.repository.CommentRepository;
 import peakspace.enums.Role;
 import peakspace.repository.PublicationRepository;
 import peakspace.repository.UserRepository;
 import peakspace.service.PublicationService;
+
 import java.security.Principal;
 import java.util.Map;
 import java.util.List;
@@ -40,6 +50,7 @@ public class PublicationServiceImpl implements PublicationService {
     public GetAllPostsResponse getAllPosts(Principal principal) {
         User user = userRepository.getByEmail(principal.getName());
         Map<Long, String> publics = user.getPublications().stream()
+                .filter(publication -> publication.getPablicProfile() == null)
                 .collect(Collectors.toMap(
                         Publication::getId,
                         publication -> {
@@ -100,8 +111,8 @@ public class PublicationServiceImpl implements PublicationService {
 
     @Override
     public MyPostResponse getById(Long postId) {
-        MyPostResponse myPost = getMyPost(postId);
-        return myPost;
+        publicationRepository.findById(postId).orElseThrow(() -> new NotFoundException(" Нет такой пост !"));
+        return getMyPost(postId);
     }
 
     @Override
@@ -110,20 +121,22 @@ public class PublicationServiceImpl implements PublicationService {
         List<Publication> friendsPublic = userRepository.findFriendsPub(friendId);
         List<PublicationResponse> allPublications = new ArrayList<>();
         for (Publication publication : friendsPublic) {
-            PublicationResponse publicationResponse = new PublicationResponse();
-            publicationResponse.setId(publication.getId());
+            if (publication.getPablicProfile() == null) {
+                PublicationResponse publicationResponse = new PublicationResponse();
+                publicationResponse.setId(publication.getId());
 
-            List<Link_Publication> linkPublications = publication.getLinkPublications();
-            List<LinkPublicationResponse> linkPublicationResponses = new ArrayList<>();
+                List<Link_Publication> linkPublications = publication.getLinkPublications();
+                List<LinkPublicationResponse> linkPublicationResponses = new ArrayList<>();
 
-            for (Link_Publication linkPublication : linkPublications) {
-                LinkPublicationResponse linkPublicationResponse = new LinkPublicationResponse();
-                linkPublicationResponse.setId(linkPublication.getId());
-                linkPublicationResponse.setLink(linkPublication.getLink());
-                linkPublicationResponses.add(linkPublicationResponse);
+                for (Link_Publication linkPublication : linkPublications) {
+                    LinkPublicationResponse linkPublicationResponse = new LinkPublicationResponse();
+                    linkPublicationResponse.setId(linkPublication.getId());
+                    linkPublicationResponse.setLink(linkPublication.getLink());
+                    linkPublicationResponses.add(linkPublicationResponse);
+                }
+                publicationResponse.setLinkPublications(linkPublicationResponses);
+                allPublications.add(publicationResponse);
             }
-            publicationResponse.setLinkPublications(linkPublicationResponses);
-            allPublications.add(publicationResponse);
         }
         return allPublications;
     }
@@ -132,19 +145,24 @@ public class PublicationServiceImpl implements PublicationService {
     public List<HomePageResponse> homePage() {
         User currentUser = getCurrentUser();
         List<HomePageResponse> homePages = new ArrayList<>();
-        List<Publication> allPublications = new ArrayList<>();
 
-        allPublications.addAll(currentUser.getPublications());
+        List<Publication> currentUserPublications = currentUser.getPublications().stream()
+                .filter(publication -> publication.getPablicProfile() == null)
+                .toList();
+
+        List<Publication> allPublications = new ArrayList<>(currentUserPublications);
 
         for (Chapter chapter : currentUser.getChapters()) {
             for (Publication friendPublication : chapter.getFriends().stream()
                     .flatMap(friend -> friend.getPublications().stream())
-                    .collect(Collectors.toList())) {
+                    .filter(publication -> publication.getPablicProfile() == null)
+                    .toList()) {
                 if (!allPublications.contains(friendPublication)) {
                     allPublications.add(friendPublication);
                 }
             }
         }
+
         allPublications.sort(Comparator.comparing(Publication::getCreatedAt).reversed());
 
         for (Publication publication : allPublications) {
@@ -170,6 +188,7 @@ public class PublicationServiceImpl implements PublicationService {
         return homePages;
     }
 
+
     public MyPostResponse getMyPost(Long postId) {
         Publication publication = publicationRepository.getReferenceById(postId);
         List<CommentResponse> commentForResponse = commentRepository.getCommentForResponse(publication.getId());
@@ -191,6 +210,24 @@ public class PublicationServiceImpl implements PublicationService {
                 .build();
     }
 
+
+
+    @Override
+    public PostLinkResponse findInnerPost(Long postId) {
+        Publication publication = publicationRepository.findById(postId).orElseThrow(() -> new NotFoundException(" Нет такой post !"));
+
+        List<LinkResponse> linkResponses = publication.getLinkPublications().stream()
+                .map(link -> new LinkResponse(link.getId(), link.getLink()))
+                .toList();
+
+        return PostLinkResponse.builder()
+                .postId(publication.getId())
+                .linkResponses(linkResponses)
+                .countLikes(publication.getLikes().size())
+                .countComments(publication.getComments().size())
+                .build();
+    }
+
     private User getCurrentUser() {
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
         User current = userRepository.getByEmail(email);
@@ -198,4 +235,5 @@ public class PublicationServiceImpl implements PublicationService {
             return current;
         else throw new AccessDeniedException("Forbidden 403");
     }
+
 }
